--- a/docs-portal.html
+++ b/docs-portal.html
@@ -3,31 +3,32 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>업무 가이드 포털</title>
+  <title>이동 안내</title>
+  <meta http-equiv="refresh" content="0; url=/guide/encyclopedia/" />
   <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
   <div class="layout-page">
     <header class="site-header">
       <div class="site-header-inner">
-        <div class="site-title">고주무관의 교직원을 위한 행정업무 안내 사이트</div>
+        <div class="site-title">귀여운 고주무관의 교직원용 업무보조 웹사이트 (비공식)</div>
         <nav class="site-nav">
           <a href="/">홈</a>
-          <a href="/docs-portal.html" class="is-active">업무 가이드</a>
-          <a href="/faq.html">자주 묻는 질문</a>
+          <a href="/guide/">업무 가이드</a>
+          <a href="/faq/">자주 묻는 질문</a>
         </nav>
       </div>
     </header>
 
     <main class="main-content">
       <section class="page-wrap">
-        <h1 class="page-title" id="docsPageTitle">업무 백과사전</h1>
-        <p class="page-subtitle" id="docsPageSubtitle"></p>
+        <h1 class="page-title">페이지 이동</h1>
+        <p class="page-subtitle">주소 변경함. 이동중</p>
 
-        <div class="docs-layout">
-          <!-- ✅ 사이드바/본문은 JSON 렌더링 -->
-          <aside class="docs-sidebar" id="docsSidebar"></aside>
-          <div class="docs-content" id="docsContent"></div>
+        <div class="card">
+          <p style="margin:0;">
+            이동이 안 되면 <a href="/guide/encyclopedia/"><strong>여기</strong></a>를 눌러주세요.
+          </p>
         </div>
       </section>
     </main>
@@ -37,9 +38,7 @@
     </footer>
   </div>
 
-  <button id="scrollTopBtn" aria-label="위로 가기">↑</button>
-  <script src="/static/site-common.js"></script>
-  <script src="/static/site.js"></script>
-  <script src="/static/render-docs-portal.js"></script>
+<script src="/static/site-common.js"></script>
+<script src="/static/ui-common.js"></script>
 </body>
 </html>
